--- a/springboot-web/src/main/resources/templates/details.html
+++ b/springboot-web/src/main/resources/templates/details.html
@@ -15,5 +15,12 @@
         <li th:if="${user.email}" th:text="${user.email}"></li>
         <li th:if="${user.email == null}" th:text="${no tiene email}"></li>
     </ul>
+<a th:href="@{/list}">ver listado</a><br>
+<a th:href="@{/api/params/foo?message=Hola que tal festival}">ver Mensaje</a><br>
+<a th:href="@{/api/params/foo(message='Hola que tal festival')}">ver Mensaje 2</a><br>
+<a th:href="@{/api/params/bar(text='Hola que tal festival', code=32323)}">ver bar mix</a><br>
+<a th:href="@{/api/var/baz/hola algun mensaje}">ver var path variable</a><br>
+<a th:href="@{'/api/var/baz/' +${title}}">ver var path variable</a><br>
+<a th:href="@{'/api/var/baz/' +'Hola que tal festival'}">ver var path variable 2</a><br>
 </body>
 </html>
